# forgo-rust

./: Cargo.toml  Makefile.toml  ORIGIN.md  README.md  rust-toolchain.toml
.github/actions/setup-rust/: action.yaml  action.yml
.github/workflows/: audit.yaml  ci.yaml  release.yaml
crates/cli-forgo/: Cargo.toml
crates/forgo/: Cargo.toml  README.md
crates/forgo-lib-cli/: Cargo.toml  README.md
crates/forgo/src/: main.rs
crates/forgo_lib_cli/: Cargo.toml  README.md
