[package]
name = "forgo"
version = "0.0.0"
edition = "2024"
publish = true
description = "A CLI tool for doing awesome things."
license = "MIT"
repository = "https://github.com/forgo/forgo-rust"
keywords = ["cli", "tool", "command-line", "forgo"]
categories = ["command-line-utilities"]
readme = "README.md" # relative to this Cargo.toml

[dependencies]
#forgo-lib-cli = "0.0.0"

[[bin]]
name = "forgo"
path = "src/main.rs"
