[package]
name = "forgo_lib_cli"
version = "0.0.0"
edition = "2024"
publish = true
description = "A library to help build common features into your CLI (e.g. - device code flow)."
license = "MIT"
repository = "https://github.com/forgo/forgo-rust"
keywords = ["cli", "library", "command-line", "forgo"]
categories = ["command-line-interface"]
readme = "README.md" # relative to this Cargo.toml

[dependencies]
